--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-01-31 21:02:34 -0800 
+%% Created for Ryan Tibshirani at 2023-02-02 06:38:12 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{christmann2008support,
+	author = {Adreas Christmann and Ingo Steinwart},
+	date-added = {2023-02-02 06:35:26 -0800},
+	date-modified = {2023-02-02 06:38:04 -0800},
+	publisher = {Springer},
+	title = {Support Vector Machines},
+	year = {2008}}
 
 @inproceedings{deboor2009way,
 	author = {Carl de Boor},
@@ -23,10 +31,6 @@
 	publisher = {Springer},
 	title = {Box Splines},
 	year = {1993}}
-
-@book{cite-key,
-	date-added = {2023-01-31 20:49:02 -0800},
-	date-modified = {2023-01-31 20:49:02 -0800}}
 
 @article{demmler1975oscillation,
 	author = {A. Demmler and Christian Reinsch},
