--- a/lectures/nn_kernels/nn_kernels.tex
+++ b/lectures/nn_kernels/nn_kernels.tex
@@ -604,10 +604,10 @@ theory lecture.
 % define a Holder space over an open domain (as otherwise what do you mean by 
 % being differentiable at the boundary?). But .... for consistency with the
 % Lipschitz statement and not to propogate a lot of changes now (since the
-% homework already has them prove the statement for [0,1]^d), we can just leave
-% it as is. And, even if we wanted to precise it's fine, as we could just define
-% the Lipschitz condition (in the Holder space definition) with respect to the
-% points in the interior.    
+% homework already has them prove a minimax statement for [0,1]^d), we can just
+% leave it as is. And, even if we wanted to precise it's fine, as we could just
+% define the Lipschitz condition (in the Holder space definition) with respect
+% to the points in the interior.    
 
 So now let's think about rate optimal estimators. We saw from
 \eqref{eq:knn_rate} and \eqref{eq:kernel_rate} that both kNN regression and
